<resources>
    <string name="app_name">SEP_Android_App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_contact_info">Contact Info</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Room Management App</string>
    <string name="nav_header_subtitle">SEP Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_as_admin">As Admin</string>

    // Nav Menu Strings
    <string name="menu_home">Home</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_users">Users</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_room_data">Room Data</string>

    // Actions
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_view_data">View Data</string>
    <string name="action_save">Save</string>
    <string name="action_create">Create</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    // General Strings
    <string name="user_details">User Details</string>
    <string name="home_second">Home Second</string>
    <string name="room_details">Room Details</string>
    <string name="date">Date</string>
    <string name="string_value">Value</string>
    <string name="average_temperature">Average Temperature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Credits
    <string name="r_credit">Done by Ronald</string>
</resources>
