<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rooms">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.sep_android_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.github.sep_android_app.ui.admin.fragment_admin"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" >
    </fragment>

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.github.sep_android_app.ui.alerts.fragment_alerts"
        android:label="@string/menu_alerts"
        tools:layout="@layout/fragment_alerts" >
    </fragment>

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.github.sep_android_app.ui.rooms.fragment_rooms"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" >
<!--        Action used since sending data between fragments this way is easier because of arguments-->
        <action
            android:id="@+id/action_nav_rooms_to_fragment_room_data"
            app:destination="@id/fragment_room_data" />
        <argument
            android:name="createdRoomName"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_rooms_to_fragmentCreateRoom"
            app:destination="@id/fragmentCreateRoom" />
    </fragment>

    <fragment
        android:id="@+id/nav_users"
        android:name="com.github.sep_android_app.ui.users.fragment_users"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" >
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.github.sep_android_app.ui.notifications.fragment_notifications"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" >
    </fragment>

    <fragment
        android:id="@+id/fragment_room_data"
        android:name="com.github.sep_android_app.ui.rooms.fragment_room_data"
        android:label="@string/menu_room_data"
        tools:layout="@layout/fragment_room_data" >
<!--        Argument for getting the data passed from nav rooms-->
        <argument
            android:name="roomName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fragmentCreateRoom"
        android:name="com.github.sep_android_app.ui.EditAndCreateFragments.FragmentCreateRoom"
        tools:layout="@layout/fragment_create_room"
        android:label="FragmentCreateRoom" >
        <action
            android:id="@+id/action_fragmentCreateRoom_to_nav_rooms"
            app:destination="@id/nav_rooms" />
        <argument android:name="roomAdapter" />
    </fragment>
</navigation>