<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!--<item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />-->

        <!--<item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_admin"
            android:title="@string/menu_admin" />-->

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_menu_alerts"
            android:title="@string/menu_alerts" />

        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_menu_rooms"
            android:title="@string/menu_rooms" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_users" />

        <!--<item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/menu_notifications" />-->

    </group>
</menu>
