<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/room_cardView"
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="151dp">

            <Button
                android:id="@+id/edit_room_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="101dp"
                android:layout_height="39dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/action_edit"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <Button
                android:id="@+id/delete_room_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="101dp"
                android:layout_height="39dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/action_delete"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/view_data_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="101dp"
                android:layout_height="39dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:text="@string/action_view_data"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_room_button"
                app:layout_constraintStart_toEndOf="@+id/edit_room_button" />


            <TextView
                android:id="@+id/tv_room_name"
                android:layout_width="242dp"
                android:layout_height="59dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:padding="10dp"
                android:text="John Doe"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>